Some tests, FCKNG JS TESTS ARE WORKING NOW!!!

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,7 @@ kotlin_version=1.2.51
 jdk_version=1.8
 jdk_version_short=8
 klock_version=0.5.0
+
+nodejs_plugin_version=1.2.0
+nodejs_version=10.8.0
+npm_version=6.3.0
