--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,7 @@
-kotlin_version=1.2.51
-jdk_version=1.8
-jdk_version_short=8
+kotlin_version=1.2.60
 klock_version=0.5.0
-
+atomicfu_version=0.11.0
 nodejs_plugin_version=1.2.0
 nodejs_version=10.8.0
 npm_version=6.3.0
-
 junit_jupiter_version=5.3.0-M1
