CI artifacts paths fix.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build:
   - ./gradlew assemble
   artifacts:
     paths:
-    - build/libs/*.jar
+    - platform/*/build/libs/*
     expire_in: 1 week
   only:
   - master
