Named Groups removal, CI fixes, the Builder refactoring, tests cleanup - Added the 'node_modules' directory to GitLab CI caches. - Fully refactored the Formatter Builder. - Removed all the ugly containers and replaced them with type aliases. - Made conversion creation functions with lambdas inline. - Encapsulated conversion prefix and conversion itself into the separate data class. - Removed the named regex groups as of Kotlin2JS currently doesn't support them (feel free to tell me if I'm wrong :) ). -

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-stages:
+stages:   #TODO: move to Docker?
 - build
 - test
 
@@ -9,6 +9,8 @@ cache:
   paths:
   - .gradle/wrapper
   - .gradle/caches
+  - platform/*/.gradle
+  - platform/js/node_modules
 
 build:
   stage: build
@@ -25,6 +27,3 @@ test:
   stage: test
   script:
   - ./gradlew check
-
-after_script:
-- echo "Finished!"
