--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,4 @@ nodejs_plugin_version=1.2.0
 nodejs_version=10.8.0
 npm_version=6.3.0
 junit_jupiter_version=5.3.0-M1
-jacoco_version=0.8.1
+jacoco_version=0.8.2-SNAPSHOT
